--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -29,6 +29,7 @@
         height="100" 
         color="#7BC8A4"
         material="src: #grass;
+        repeat: 15 15"
         shadow>
       </a-plane> 
     </a-scene>
