--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -19,9 +19,8 @@
         rotation="0 45 0" 
         width="3" 
         height="1" 
-        depth="1"
-        material="src: #wood" 
-        shadow>
+        depth="1" 
+         material="src:#wood">
       </a-box>
       <a-plane id="ground"
         position="0 0 -4" 
@@ -29,7 +28,7 @@
         width="100" 
         height="100" 
         color="#7BC8A4"
-        material="src: #grass; repeat: 15 15"
+        material="src:#grass">
         shadow>
       </a-plane> 
     </a-scene>
