--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -44,7 +44,12 @@
         height="100" 
         color="#7BC8A4" 
         material="src: #grass; repeat: 10 10"
-        shadow>
+        shadow
+         animation="property: rotation; 
+                   to: -120 1360 180; 
+                   dur: 3000; 
+                   easing: linear; 
+                   loop: true" >>
       </a-plane> 
     </a-scene>
   </body>
