--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -49,7 +49,7 @@
                    to: -120 1360 180; 
                    dur: 3000; 
                    easing: linear; 
-                   loop: true" >>
+                   loop: true" >
       </a-plane> 
     </a-scene>
   </body>
